ingress/1.0/nginx-tomcat.yaml
# nginx-tomcat.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: crpi-jnk3ch80my2cet7k.cn-shenzhen.personal.cr.aliyuncs.com/mall-devops/nginx:1.10
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
          
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: crpi-jnk3ch80my2cet7k.cn-shenzhen.personal.cr.aliyuncs.com/mall-devops/tomcat:8.0-alpine
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080

---
apiVersion: v1 
kind: Service  
metadata:      
  name: tomcat-svc
spec:          
  selector:    
    app: tomcat 
  ports:       
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
